apps/staging/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: audio.mozka.app
    external-dns.alpha.kubernetes.io/target: b9ed9240-d3f9-4d5c-a5c2-816bf1f3d77b.cfargotunnel.com
  name: audiobookshelf-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: audio.mozka.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 3005
